--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion "28.0.2"
     defaultConfig {
         applicationId "com.mauto.mvisample"
@@ -21,10 +21,38 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    //----------------------------- remote -------------------------------
+    ///* ----------------------- >> OkHttp << ----------------------- */
+    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
+    // for unit test
+    testImplementation 'com.squareup.okhttp3:mockwebserver:3.11.0'
+    /* ----------------------- >> OkHttp << ----------------------- *///
+
+    ///* ----------------------- >> Retrofit << ----------------------- */
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
+    // for unite test
+    implementation 'com.squareup.retrofit2:retrofit-mock:2.4.0'
+    /* ----------------------- >> Retrofit << ----------------------- *///
+    //--------------------------------------------------------------------
+
+    ///* ----------------------- >> Reactive << ----------------------- */
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    /* ----------------------- >> Reactive << ----------------------- *///
+
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+
+    // RecyclerView
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+
+    implementation 'com.google.code.gson:gson:2.8.4'
 }
