--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,23 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    ///* ----------------------- >> Retrofit << ----------------------- */
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
+    // for unite test
+    implementation 'com.squareup.retrofit2:retrofit-mock:2.4.0'
+    /* ----------------------- >> Retrofit << ----------------------- *///
+    //--------------------------------------------------------------------
+
+    ///* ----------------------- >> Reactive << ----------------------- */
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    /* ----------------------- >> Reactive << ----------------------- *///
+
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+
+    // RecyclerView
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
 }
