--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion "28.0.2"
     defaultConfig {
         applicationId "com.mauto.mvisample"
@@ -21,12 +21,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    implementation project(":Repository")
 
     ///* ----------------------- >> Retrofit << ----------------------- */
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
@@ -45,5 +47,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.7.1'
 
     // RecyclerView
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
 }
